--- a/MarcelJoachimKloubert.CLRToolbox.20.TestConsole/MarcelJoachimKloubert.CLRToolbox.20.TestConsole.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20.TestConsole/MarcelJoachimKloubert.CLRToolbox.20.TestConsole.csproj
@@ -46,6 +46,14 @@
       <Name>MarcelJoachimKloubert.CLRToolbox.20</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="my.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="test.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
