--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Configuration\ConfigRepositoryBase.cs" />
     <Compile Include="Configuration\IConfigRepository.cs" />
     <Compile Include="Configuration\Impl\KeyValuePairConfigRepository.cs" />
+    <Compile Include="Configuration\Impl\IniFileConfigRepository.cs" />
     <Compile Include="Data\CommonConverter.OnChangeTypeExtension.cs">
       <DependentUpon>CommonConverter.cs</DependentUpon>
     </Compile>
