--- a/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
@@ -367,6 +367,10 @@
       <Link>Helpers\StringHelper.IsNullOrWhiteSpace.cs</Link>
       <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.UppercaseWords.cs">
+      <Link>Helpers\StringHelper.UppercaseWords.cs</Link>
+      <DependentUpon>StringHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IHasName.cs">
       <Link>IHasName.cs</Link>
     </Compile>
